--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,54 @@ on:
       - '*'
 
 jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Build partitionProcessorLambda
+      run: |
+        cd src/partitionProcessorLambda
+        npm ci
+        npm run build
+        mkdir -p ../../dist/partitionProcessorLambda
+        cp -r node_modules dist/* ../../dist/partitionProcessorLambda/
+
+    - name: Build batchProcessorLambda
+      run: |
+        cd src/batchProcessorLambda
+        npm ci
+        npm run build
+        mkdir -p ../../dist/batchProcessorLambda
+        cp -r node_modules dist/* ../../dist/batchProcessorLambda/
+
+    - name: Package Lambda functions
+      run: |
+        cd dist
+        zip -r partitionProcessorLambda.zip partitionProcessorLambda
+        zip -r batchProcessorLambda.zip batchProcessorLambda
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        role-to-assume: ${{ secrets.AWS_ROLE }}
+        aws-region: eu-central-1
+
+    - name: Upload Lambda artifacts to S3
+      run: |
+        REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
+        aws s3 cp dist/partitionProcessorLambda.zip s3://${{ secrets.AWS_LAMBDA_ARTIFACTS_S3_BUCKET }}/${REPO_NAME}/partitionProcessorLambda.zip
+        aws s3 cp dist/batchProcessorLambda.zip s3://${{ secrets.AWS_LAMBDA_ARTIFACTS_S3_BUCKET }}/${REPO_NAME}/batchProcessorLambda.zip
+
   terraform-ci:
+    needs: build-and-test
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -32,6 +79,7 @@ jobs:
       run: |
         REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
         echo "S3_KEY=${REPO_NAME}/${{ secrets.AWS_BUCKET_KEY_NAME }}" >> $GITHUB_ENV
+        echo "REPO_NAME=${REPO_NAME}" >> $GITHUB_ENV
 
     - name: Terraform Init
       id: init
@@ -55,4 +103,4 @@ jobs:
     - name: Terraform Plan
       run: |
         cd terraform
-        terraform plan
+        terraform plan -var="lambda_artifacts_bucket_name=${{ secrets.AWS_LAMBDA_ARTIFACTS_S3_BUCKET }}" -var="repo_name=${REPO_NAME}"
