--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,10 +27,11 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
 
-    - name: Set S3 key name
+    - name: Set S3 key name and repo name
       run: |
         REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
         echo "S3_KEY=${REPO_NAME}/${{ secrets.AWS_BUCKET_KEY_NAME }}" >> $GITHUB_ENV
+        echo "REPO_NAME=${REPO_NAME}" >> $GITHUB_ENV
 
     - name: Terraform Init
       id: init
@@ -46,9 +47,10 @@ jobs:
       id: plan
       run: |
         cd terraform
-        terraform plan -out=tfplan -detailed-exitcode
+        terraform plan -out=tfplan -detailed-exitcode -var="repo_name=${REPO_NAME}"
       env:
         TF_VAR_lambda_artifacts_bucket_name: ${{ vars.AWS_LAMBDA_ARTIFACTS_S3_BUCKET }}
+        TF_VAR_repo_name: ${{ env.REPO_NAME }}
       timeout-minutes: 15
       continue-on-error: true
 
