--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,27 +24,31 @@ jobs:
       with:
         node-version: '18'
 
+    - name: Get short SHA
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
+
     - name: Build partitionProcessorLambda
       run: |
         cd src/partitionProcessorLambda
         npm ci
         npm run build
-        mkdir -p ../../dist/partitionProcessorLambda
-        cp -r node_modules dist/* ../../dist/partitionProcessorLambda/
+        mkdir -p ../../dist/partitionProcessorLambda_${{ steps.slug.outputs.sha8 }}
+        cp -r node_modules dist/* ../../dist/partitionProcessorLambda_${{ steps.slug.outputs.sha8 }}/
 
     - name: Build batchProcessorLambda
       run: |
         cd src/batchProcessorLambda
         npm ci
         npm run build
-        mkdir -p ../../dist/batchProcessorLambda
-        cp -r node_modules dist/* ../../dist/batchProcessorLambda/
+        mkdir -p ../../dist/batchProcessorLambda_${{ steps.slug.outputs.sha8 }}
+        cp -r node_modules dist/* ../../dist/batchProcessorLambda_${{ steps.slug.outputs.sha8 }}/
 
     - name: Package Lambda functions
       run: |
         cd dist
-        zip -r partitionProcessorLambda.zip partitionProcessorLambda
-        zip -r batchProcessorLambda.zip batchProcessorLambda
+        zip -r partitionProcessorLambda_${{ steps.slug.outputs.sha8 }}.zip partitionProcessorLambda_${{ steps.slug.outputs.sha8 }}
+        zip -r batchProcessorLambda_${{ steps.slug.outputs.sha8 }}.zip batchProcessorLambda_${{ steps.slug.outputs.sha8 }}
 
     - name: Configure AWS credentials
       if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
@@ -53,14 +57,36 @@ jobs:
         role-to-assume: ${{ secrets.AWS_ROLE }}
         aws-region: eu-central-1
 
-    - name: Upload Lambda artifacts to S3
+    - name: Clean up old Lambda artifacts and upload new ones
       if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
       env:
         S3_BUCKET: ${{ vars.AWS_LAMBDA_ARTIFACTS_S3_BUCKET }}
       run: |
         REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
-        aws s3 cp dist/partitionProcessorLambda.zip s3://${S3_BUCKET}/${REPO_NAME}/partitionProcessorLambda.zip
-        aws s3 cp dist/batchProcessorLambda.zip s3://${S3_BUCKET}/${REPO_NAME}/batchProcessorLambda.zip
+        
+        # Function to delete old artifacts and upload new one
+        clean_and_upload() {
+          local prefix=$1
+          local new_file=$2
+          
+          # List and delete old artifacts
+          aws s3 ls s3://${S3_BUCKET}/${REPO_NAME}/${prefix} | awk '{print $4}' | while read old_file; do
+            if [[ $old_file != $new_file ]]; then
+              aws s3 rm s3://${S3_BUCKET}/${REPO_NAME}/$old_file
+              echo "Deleted old artifact: $old_file"
+            fi
+          done
+          
+          # Upload new artifact
+          aws s3 cp dist/$new_file s3://${S3_BUCKET}/${REPO_NAME}/$new_file
+          echo "Uploaded new artifact: $new_file"
+        }
+        
+        # Clean up and upload partitionProcessorLambda
+        clean_and_upload "partitionProcessorLambda" "partitionProcessorLambda_${{ steps.slug.outputs.sha8 }}.zip"
+        
+        # Clean up and upload batchProcessorLambda
+        clean_and_upload "batchProcessorLambda" "batchProcessorLambda_${{ steps.slug.outputs.sha8 }}.zip"
 
   terraform-ci:
     needs: build-and-test
@@ -82,6 +108,10 @@ jobs:
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
+
+    - name: Get short SHA
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${GITHUB_SHA} | cut -c1-8)"
 
     - name: Set S3 key name and repo name
       run: |
@@ -112,6 +142,7 @@ jobs:
       env:
         TF_VAR_lambda_artifacts_bucket_name: ${{ vars.AWS_LAMBDA_ARTIFACTS_S3_BUCKET }}
         TF_VAR_repo_name: ${{ env.REPO_NAME }}
+        TF_VAR_commit_sha: ${{ steps.slug.outputs.sha8 }}
       run: |
         cd terraform
-        terraform plan -var="repo_name=${REPO_NAME}"
+        terraform plan -var="repo_name=${REPO_NAME}" -var="commit_sha=${{ steps.slug.outputs.sha8 }}"
