--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,7 +8,7 @@ env:
   TF_INPUT: "false"
 
 jobs:
-  terraform-cd:
+  terraform-apply:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
@@ -27,6 +27,10 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
 
+    - name: Get short SHA
+      id: slug
+      run: echo "sha8=$(echo ${GITHUB_SHA} | cut -c1-8)" >> $GITHUB_OUTPUT
+
     - name: Set S3 key name and repo name
       run: |
         REPO_NAME=$(echo ${{ github.repository }} | cut -d'/' -f2)
@@ -43,34 +47,18 @@ jobs:
         terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${S3_KEY}" -backend-config="region=${AWS_REGION}"
       timeout-minutes: 5
 
-    - name: Terraform Plan
-      id: plan
-      run: |
-        cd terraform
-        terraform plan -out=tfplan -detailed-exitcode -var="repo_name=${REPO_NAME}"
+    - name: Terraform Apply
       env:
         TF_VAR_lambda_artifacts_bucket_name: ${{ vars.AWS_LAMBDA_ARTIFACTS_S3_BUCKET }}
         TF_VAR_repo_name: ${{ env.REPO_NAME }}
-      timeout-minutes: 15
-      continue-on-error: true
-
-    - name: Check Plan Status
-      if: steps.plan.outcome == 'failure'
-      run: |
-        echo "Terraform plan failed or timed out. Please check the logs and configuration."
-        exit 1
-
-    - name: Terraform Apply
-      if: steps.plan.outputs.exitcode == 2
+        TF_VAR_commit_sha: ${{ steps.slug.outputs.sha8 }}
       run: |
         cd terraform
-        terraform apply -auto-approve tfplan
+        terraform apply -auto-approve -var="repo_name=${REPO_NAME}" -var="commit_sha=${{ steps.slug.outputs.sha8 }}"
       timeout-minutes: 30
 
     - name: Check Apply Status
-      if: steps.plan.outputs.exitcode == 2
+      if: failure()
       run: |
-        if [ ${{ job.status }} == 'failure' ]; then
-          echo "Terraform apply failed or timed out. Please check the logs and infrastructure state."
-          exit 1
-        fi
+        echo "Terraform apply failed or timed out. Please check the logs and infrastructure state."
+        exit 1
