--- a/src/partitionProcessorLambda/package.json
+++ b/src/partitionProcessorLambda/package.json
@@ -12,6 +12,8 @@
     },
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.645.0",
+        "@aws-sdk/client-lambda": "^3.649.0",
+        "@aws-sdk/util-dynamodb": "^3.649.0",
         "aws-sdk": "^2.1691.0",
         "winston": "^3.14.2"
     },
