--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,7 +44,11 @@ jobs:
         AWS_REGION: eu-central-1
       run: |
         cd terraform
-        terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${S3_KEY}" -backend-config="region=${AWS_REGION}"
+        terraform init \
+          -backend-config="bucket=${AWS_BUCKET_NAME}" \
+          -backend-config="key=${S3_KEY}" \
+          -backend-config="region=${AWS_REGION}" \
+          -backend-config="dynamodb_table=terraform-state-lock"
       timeout-minutes: 5
 
     - name: Terraform Apply
@@ -54,7 +58,11 @@ jobs:
         TF_VAR_commit_sha: ${{ steps.slug.outputs.sha8 }}
       run: |
         cd terraform
-        terraform apply -auto-approve -var="repo_name=${REPO_NAME}" -var="commit_sha=${{ steps.slug.outputs.sha8 }}"
+        terraform apply -auto-approve \
+          -var="repo_name=${REPO_NAME}" \
+          -var="commit_sha=${{ steps.slug.outputs.sha8 }}" \
+          -lock=true \
+          -lock-timeout=300s
       timeout-minutes: 30
 
     - name: Check Apply Status
