--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,11 @@ jobs:
         AWS_REGION: eu-central-1
       run: |
         cd terraform
-        terraform init -backend-config="bucket=${AWS_BUCKET_NAME}" -backend-config="key=${S3_KEY}" -backend-config="region=${AWS_REGION}"
+        terraform init \
+          -backend-config="bucket=${AWS_BUCKET_NAME}" \
+          -backend-config="key=${S3_KEY}" \
+          -backend-config="region=${AWS_REGION}" \
+          -backend-config="dynamodb_table=terraform-state-lock"
 
     - name: Terraform Format
       run: |
@@ -119,4 +123,8 @@ jobs:
         TF_VAR_commit_sha: ${{ steps.slug.outputs.sha8 }}
       run: |
         cd terraform
-        terraform plan -var="repo_name=${REPO_NAME}" -var="commit_sha=${{ steps.slug.outputs.sha8 }}"
+        terraform plan \
+          -var="repo_name=${REPO_NAME}" \
+          -var="commit_sha=${{ steps.slug.outputs.sha8 }}" \
+          -lock=true \
+          -lock-timeout=300s
